<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextNewProductName"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/editTextNewProductName"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/btnAddNewProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewAddProduct"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/btnAddNewProduct" />

    <Button
        android:id="@+id/btnAddPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnAddNewProduct"
        android:layout_toEndOf="@+id/imageViewAddProduct"
        android:text="@string/btnAddPicture" />

    <EditText
        android:id="@+id/editTextAddUnit"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="134dp"
        android:ems="10"
        android:hint="@string/editTextAddUnit" />

    <ImageView
        android:id="@+id/imageViewAddProduct"
        android:layout_width="102dp"
        android:layout_height="93dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="189dp"
        app:srcCompat="@mipmap/ic_zakupy" />

    <Button
        android:id="@+id/buttonAddImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnAddNewProduct"
        android:layout_toStartOf="@+id/imageViewAddProduct"
        android:text="@string/buttonAddImage" />


</RelativeLayout>